[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/LC_Crimbus/big_room.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/22.0 Crimbus/BigRoom.gd" type="Script" id=5]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/LC_Crimbus/guard_bot.png" type="Texture" id=7]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 122.89, 64.807 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70.5171, 35.082 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57.9221, 28.6301 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 57.2848, 36.8337 )

[node name="BigRoom" type="Node2D"]
script = ExtResource( 5 )

[node name="big_room" type="Sprite" parent="."]
position = Vector2( 12.7705, 86.2383 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -5.10785, 454.595 )

[node name="GuardBot" type="Node2D" parent="YSort"]
position = Vector2( 2.9689, -206.33 )

[node name="guard_bot" type="Sprite" parent="YSort/GuardBot"]
position = Vector2( 6.09836, -64.7979 )
texture = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/GuardBot"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/GuardBot/StaticBody2D"]
polygon = PoolVector2Array( -57.7305, -11.3598, -26.5583, 27.2344, 9.06711, 27.2344, 78.8335, -12.8442, 83.2867, -61.8291, -72.5744, -55.8915 )

[node name="collisions" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D"]

[node name="StaticBody2D4" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D4"]

[node name="StaticBody2D11" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D11"]
polygon = PoolVector2Array( 243.687, -64.217, 292.211, 262.683, 349.598, -18.6527 )

[node name="StaticBody2D12" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D12"]
polygon = PoolVector2Array( -24.4729, -82.0943, 90.4528, 173.296, 187.501, 191.173, 238.579, -66.7709 )

[node name="StaticBody2D8" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D8"]
polygon = PoolVector2Array( -226.231, -51.4474, -159.83, 209.051, -75.551, 175.85, 15.0802, -86.3486 )

[node name="StaticBody2D9" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D9"]
polygon = PoolVector2Array( -353.391, 17.046, -279.863, 290.776, -221.124, -51.4474 )

[node name="StaticBody2D10" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D10"]
polygon = PoolVector2Array( 358.613, 484.872, 251.349, 673.861, 24.0511, 799.002, 333.073, 954.79 )

[node name="StaticBody2D5" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D5"]
polygon = PoolVector2Array( -349.677, 615.753, -207.004, 778.18, 30.0515, 802.325, 6.17383, 998.207, -489.283, 776.017 )

[node name="StaticBody2D6" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D6"]
polygon = PoolVector2Array( 539.282, 34.0889, 431.729, 152.617, 357.101, 481.861, 1009, 538.93 )

[node name="StaticBody2D7" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D7"]
polygon = PoolVector2Array( -564.783, 16.5292, -542.833, 165.786, -446.255, 154.812, -336.507, 613.558, -830.373, 543.32 )

[node name="StaticBody2D3" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D3"]
polygon = PoolVector2Array( -62.1368, -218.332, -61.3192, -497.623, -854.517, -635.374, -560.393, 14.3342, -349.677, -139.313 )

[node name="StaticBody2D2" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D2"]
polygon = PoolVector2Array( 84.9255, -218.332, 363.686, -172.237, 539.282, 31.8939, 721.464, -648.544, 75.5786, -494.324 )

[node name="PuppyCamera" parent="." instance=ExtResource( 3 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -1260.1, -918.669 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1470.83, 1093.17 )

[node name="BG" parent="." instance=ExtResource( 4 )]
margin_left = -1307.73
margin_top = -958.402
margin_right = 1514.27
margin_bottom = 1146.6

[node name="StartSP" parent="." instance=ExtResource( 6 )]
position = Vector2( -8.23816, 480.559 )

[node name="TreeSP" parent="." instance=ExtResource( 6 )]
position = Vector2( -194.958, 295.11 )

[node name="PantrySP" parent="." instance=ExtResource( 6 )]
position = Vector2( 9.50415, 237.77 )

[node name="EngineSP" parent="." instance=ExtResource( 6 )]
position = Vector2( 225.304, 281.155 )

[node name="HelmSP" parent="." instance=ExtResource( 6 )]
position = Vector2( 10.3765, -146.334 )

[node name="HelmTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 1.32556, -324.302 )

[node name="CollisionShape2D" parent="HelmTZ" index="0"]
position = Vector2( 15.6326, 24.3662 )
shape = SubResource( 1 )

[node name="PantryTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 11.402, 105.017 )

[node name="CollisionShape2D" parent="PantryTZ" index="0"]
position = Vector2( -3.32166, 11.7494 )
shape = SubResource( 2 )

[node name="EngineTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( 251.626, 152.173 )
rotation = 0.333507

[node name="CollisionShape2D" parent="EngineTZ" index="0"]
position = Vector2( -6.73102, 5.12844 )
shape = SubResource( 3 )

[node name="TreeTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( -239.353, 177.641 )
rotation = -0.282049

[node name="CollisionShape2D" parent="TreeTZ" index="0"]
position = Vector2( 4.27182, 7.5619 )
rotation = -0.239697
shape = SubResource( 4 )
[connection signal="transition_triggered" from="HelmTZ" to="." method="_on_HelmTZ_transition_triggered"]
[connection signal="transition_triggered" from="PantryTZ" to="." method="_on_PantryTZ_transition_triggered"]
[connection signal="transition_triggered" from="EngineTZ" to="." method="_on_EngineTZ_transition_triggered"]
[connection signal="transition_triggered" from="TreeTZ" to="." method="_on_TreeTZ_transition_triggered"]

[editable path="PuppyCamera"]

[editable path="HelmTZ"]

[editable path="PantryTZ"]

[editable path="EngineTZ"]

[editable path="TreeTZ"]
